minor code refactoring

--- a/css/downloadbutton.css
+++ b/css/downloadbutton.css
@@ -52,7 +52,7 @@
 }
 .button-download {
 	width: 100%;
-	max-width: 280px;
+	max-width: 280px !important;
 	position: relative;
 	display: block;
 	background: #ddd;
